{
  "version": 4,
  "terraform_version": "1.15.0",
  "serial": 92,
  "lineage": "175e483f-1dc7-65f4-9b12-210e66f2d843",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "startuptech-bastion-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f4b8912f001ef95",
            "arn": "arn:aws:ec2:us-east-1:163841615330:elastic-ip/eipalloc-02f4b8912f001ef95",
            "association_id": "eipassoc-02177cd0e43b9fc98",
            "domain": "vpc",
            "id": "eipalloc-02f4b8912f001ef95",
            "instance": "i-0c831c8a77abaf8a0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02d14140d44559b21",
            "private_dns": "ip-10-0-1-65.ec2.internal",
            "private_ip": "10.0.1.65",
            "public_dns": "ec2-54-159-87-180.compute-1.amazonaws.com",
            "public_ip": "54.159.87.180",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "startuptech-bastion-eip"
            },
            "tags_all": {
              "Name": "startuptech-bastion-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163841615330",
            "id": "eipalloc-02f4b8912f001ef95",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.startuptech-bastion",
            "aws_internet_gateway.startuptech-igw",
            "aws_security_group.startuptech-bastion-sg",
            "aws_subnet.startuptech-public-subnet-one",
            "aws_vpc.startuptech-vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "startuptech-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00b02fca86963f6fa",
            "arn": "arn:aws:ec2:us-east-1:163841615330:elastic-ip/eipalloc-00b02fca86963f6fa",
            "association_id": "eipassoc-07aa16ce7869ea847",
            "domain": "vpc",
            "id": "eipalloc-00b02fca86963f6fa",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02e793ec5ef4f45cd",
            "private_dns": "ip-10-0-1-86.ec2.internal",
            "private_ip": "10.0.1.86",
            "public_dns": "ec2-100-59-173-141.compute-1.amazonaws.com",
            "public_ip": "100.59.173.141",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "startuptech-nat-eip"
            },
            "tags_all": {
              "Name": "startuptech-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163841615330",
            "id": "eipalloc-00b02fca86963f6fa",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "startuptech-backend-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bb26f3c35206d22d",
            "arn": "arn:aws:ec2:us-east-1:163841615330:instance/i-07714a3f689700c69",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07714a3f689700c69",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "startuptech-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0921a3a721c72d4a8"
              }
            ],
            "primary_network_interface_id": "eni-0921a3a721c72d4a8",
            "private_dns": "ip-10-0-3-218.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.218",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fbadbaf89bd371ad",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1469416ebb6e757",
            "tags": {
              "Name": "startuptech-backend-server"
            },
            "tags_all": {
              "Name": "startuptech-backend-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03886637ec050995c"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163841615330",
            "id": "i-07714a3f689700c69",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.startuptech-alb-sg",
            "aws_security_group.startuptech-backend-sg",
            "aws_security_group.startuptech-bastion-sg",
            "aws_subnet.startuptech-private-subnet-one",
            "aws_vpc.startuptech-vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "startuptech-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bb26f3c35206d22d",
            "arn": "arn:aws:ec2:us-east-1:163841615330:instance/i-0c831c8a77abaf8a0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c831c8a77abaf8a0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "startuptech-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02d14140d44559b21"
              }
            ],
            "primary_network_interface_id": "eni-02d14140d44559b21",
            "private_dns": "ip-10-0-1-65.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.65",
            "public_dns": "ec2-54-159-87-180.compute-1.amazonaws.com",
            "public_ip": "54.159.87.180",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-043b49ca6d9bc3cce",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b8d2ccb0b8ce76ac",
            "tags": {
              "Name": "startuptech-bastion"
            },
            "tags_all": {
              "Name": "startuptech-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f4ec68795d898491"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163841615330",
            "id": "i-0c831c8a77abaf8a0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.startuptech-bastion-sg",
            "aws_subnet.startuptech-public-subnet-one",
            "aws_vpc.startuptech-vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "startuptech-mongodb-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bb26f3c35206d22d",
            "arn": "arn:aws:ec2:us-east-1:163841615330:instance/i-0b3141e17e7e89efd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b3141e17e7e89efd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "startuptech-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03170cef8a2ca30ff"
              }
            ],
            "primary_network_interface_id": "eni-03170cef8a2ca30ff",
            "private_dns": "ip-10-0-4-27.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.27",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01a67f364f297092b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cf4a1e836b2336b8",
            "tags": {
              "Name": "startuptech-mongodb-server"
            },
            "tags_all": {
              "Name": "startuptech-mongodb-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-018ef998f6a358ecb"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163841615330",
            "id": "i-0b3141e17e7e89efd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.startuptech-alb-sg",
            "aws_security_group.startuptech-backend-sg",
            "aws_security_group.startuptech-bastion-sg",
            "aws_security_group.startuptech-mongodb-sg",
            "aws_subnet.startuptech-private-subnet-two",
            "aws_vpc.startuptech-vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "startuptech-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163841615330:internet-gateway/igw-05b98d2a1e16ba2dc",
            "id": "igw-05b98d2a1e16ba2dc",
            "owner_id": "163841615330",
            "region": "us-east-1",
            "tags": {
              "Name": "startuptech-igw"
            },
            "tags_all": {
              "Name": "startuptech-igw"
            },
            "vpc_id": "vpc-0c4b4619780d3cc69"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163841615330",
            "id": "igw-05b98d2a1e16ba2dc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.startuptech-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "startuptech-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:163841615330:loadbalancer/app/startuptech-alb/34bfd9afee681575",
            "arn_suffix": "app/startuptech-alb/34bfd9afee681575",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "startuptech-alb-1276104575.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:163841615330:loadbalancer/app/startuptech-alb/34bfd9afee681575",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "startuptech-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-063606ddfa6c24823"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b8d2ccb0b8ce76ac"
              },
              {
                "subnet_id": "subnet-0f2987d79de6c0b4b"
              }
            ],
            "subnets": [
              "subnet-0b8d2ccb0b8ce76ac",
              "subnet-0f2987d79de6c0b4b"
            ],
            "tags": {
              "Name": "startuptech-alb"
            },
            "tags_all": {
              "Name": "startuptech-alb"
            },
            "vpc_id": "vpc-0c4b4619780d3cc69",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:163841615330:loadbalancer/app/startuptech-alb/34bfd9afee681575"
          },
          "dependencies": [
            "aws_security_group.startuptech-alb-sg",
            "aws_subnet.startuptech-public-subnet-one",
            "aws_subnet.startuptech-public-subnet-two",
            "aws_vpc.startuptech-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "startuptech-http-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:163841615330:listener/app/startuptech-alb/34bfd9afee681575/7e03c28b7b573bc4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:163841615330:targetgroup/startuptech-backend-tg/9f1e2f523328d00e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:163841615330:listener/app/startuptech-alb/34bfd9afee681575/7e03c28b7b573bc4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:163841615330:loadbalancer/app/startuptech-alb/34bfd9afee681575",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:163841615330:listener/app/startuptech-alb/34bfd9afee681575/7e03c28b7b573bc4"
          },
          "dependencies": [
            "aws_lb.startuptech-alb",
            "aws_lb_target_group.startuptech-backend-tg",
            "aws_security_group.startuptech-alb-sg",
            "aws_subnet.startuptech-public-subnet-one",
            "aws_subnet.startuptech-public-subnet-two",
            "aws_vpc.startuptech-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "startuptech-backend-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:163841615330:targetgroup/startuptech-backend-tg/9f1e2f523328d00e",
            "arn_suffix": "targetgroup/startuptech-backend-tg/9f1e2f523328d00e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:163841615330:targetgroup/startuptech-backend-tg/9f1e2f523328d00e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:163841615330:loadbalancer/app/startuptech-alb/34bfd9afee681575"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "startuptech-backend-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "startuptech-backend-tg"
            },
            "tags_all": {
              "Name": "startuptech-backend-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c4b4619780d3cc69"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:163841615330:targetgroup/startuptech-backend-tg/9f1e2f523328d00e"
          },
          "dependencies": [
            "aws_vpc.startuptech-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "startuptech-backend-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:163841615330:targetgroup/startuptech-backend-tg/9f1e2f523328d00e,i-07714a3f689700c69,8080",
            "port": 8080,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:163841615330:targetgroup/startuptech-backend-tg/9f1e2f523328d00e",
            "target_id": "i-07714a3f689700c69"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163841615330",
            "port": 8080,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:163841615330:targetgroup/startuptech-backend-tg/9f1e2f523328d00e",
            "target_id": "i-07714a3f689700c69"
          },
          "dependencies": [
            "aws_instance.startuptech-backend-server",
            "aws_lb_target_group.startuptech-backend-tg",
            "aws_security_group.startuptech-alb-sg",
            "aws_security_group.startuptech-backend-sg",
            "aws_security_group.startuptech-bastion-sg",
            "aws_subnet.startuptech-private-subnet-one",
            "aws_vpc.startuptech-vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "startuptech-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00b02fca86963f6fa",
            "association_id": "eipassoc-07aa16ce7869ea847",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0f03404a2c1d31ac4",
            "network_interface_id": "eni-02e793ec5ef4f45cd",
            "private_ip": "10.0.1.86",
            "public_ip": "100.59.173.141",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b8d2ccb0b8ce76ac",
            "tags": {
              "Name": "startuptech-nat-gateway"
            },
            "tags_all": {
              "Name": "startuptech-nat-gateway"
            },
            "vpc_id": "vpc-0c4b4619780d3cc69"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163841615330",
            "id": "nat-0f03404a2c1d31ac4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.startuptech-nat-eip",
            "aws_internet_gateway.startuptech-igw",
            "aws_subnet.startuptech-public-subnet-one",
            "aws_vpc.startuptech-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "startuptech-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163841615330:route-table/rtb-022fbbd950b5597cf",
            "id": "rtb-022fbbd950b5597cf",
            "owner_id": "163841615330",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f03404a2c1d31ac4",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "startuptech-private-route-table"
            },
            "tags_all": {
              "Name": "startuptech-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4b4619780d3cc69"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163841615330",
            "id": "rtb-022fbbd950b5597cf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.startuptech-nat-eip",
            "aws_internet_gateway.startuptech-igw",
            "aws_nat_gateway.startuptech-nat-gateway",
            "aws_subnet.startuptech-public-subnet-one",
            "aws_vpc.startuptech-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "startuptech-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163841615330:route-table/rtb-04f32af6bde3272fd",
            "id": "rtb-04f32af6bde3272fd",
            "owner_id": "163841615330",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05b98d2a1e16ba2dc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "startuptech-public-route-table"
            },
            "tags_all": {
              "Name": "startuptech-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4b4619780d3cc69"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163841615330",
            "id": "rtb-04f32af6bde3272fd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.startuptech-igw",
            "aws_vpc.startuptech-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "startuptech-private-subnet-one-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0750c7ee841574cd9",
            "region": "us-east-1",
            "route_table_id": "rtb-022fbbd950b5597cf",
            "subnet_id": "subnet-0d1469416ebb6e757"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163841615330",
            "id": "rtbassoc-0750c7ee841574cd9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.startuptech-nat-eip",
            "aws_internet_gateway.startuptech-igw",
            "aws_nat_gateway.startuptech-nat-gateway",
            "aws_route_table.startuptech-private-route-table",
            "aws_subnet.startuptech-private-subnet-one",
            "aws_subnet.startuptech-public-subnet-one",
            "aws_vpc.startuptech-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "startuptech-private-subnet-two-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e73d755087a0f479",
            "region": "us-east-1",
            "route_table_id": "rtb-022fbbd950b5597cf",
            "subnet_id": "subnet-0cf4a1e836b2336b8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163841615330",
            "id": "rtbassoc-0e73d755087a0f479",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.startuptech-nat-eip",
            "aws_internet_gateway.startuptech-igw",
            "aws_nat_gateway.startuptech-nat-gateway",
            "aws_route_table.startuptech-private-route-table",
            "aws_subnet.startuptech-private-subnet-two",
            "aws_subnet.startuptech-public-subnet-one",
            "aws_vpc.startuptech-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "startuptech-public-subnet-one-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7f47c1be3d7e663",
            "region": "us-east-1",
            "route_table_id": "rtb-04f32af6bde3272fd",
            "subnet_id": "subnet-0b8d2ccb0b8ce76ac"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163841615330",
            "id": "rtbassoc-0c7f47c1be3d7e663",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.startuptech-igw",
            "aws_route_table.startuptech-public-route-table",
            "aws_subnet.startuptech-public-subnet-one",
            "aws_vpc.startuptech-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "startuptech-public-subnet-two-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038ae0bbe7209b154",
            "region": "us-east-1",
            "route_table_id": "rtb-04f32af6bde3272fd",
            "subnet_id": "subnet-0f2987d79de6c0b4b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163841615330",
            "id": "rtbassoc-038ae0bbe7209b154",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.startuptech-igw",
            "aws_route_table.startuptech-public-route-table",
            "aws_subnet.startuptech-public-subnet-two",
            "aws_vpc.startuptech-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "startuptech-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163841615330:security-group/sg-063606ddfa6c24823",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063606ddfa6c24823",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "startuptech-alb-sg",
            "name_prefix": "",
            "owner_id": "163841615330",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "startuptech-alb-sg"
            },
            "tags_all": {
              "Name": "startuptech-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4b4619780d3cc69"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163841615330",
            "id": "sg-063606ddfa6c24823",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.startuptech-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "startuptech-backend-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163841615330:security-group/sg-03886637ec050995c",
            "description": "Security group for Backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03886637ec050995c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB on port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-063606ddfa6c24823"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f4ec68795d898491"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "startuptech-backend-sg",
            "name_prefix": "",
            "owner_id": "163841615330",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "startuptech-backend-sg"
            },
            "tags_all": {
              "Name": "startuptech-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4b4619780d3cc69"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163841615330",
            "id": "sg-03886637ec050995c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.startuptech-alb-sg",
            "aws_security_group.startuptech-bastion-sg",
            "aws_vpc.startuptech-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "startuptech-bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163841615330:security-group/sg-0f4ec68795d898491",
            "description": "Security group for Bastion Host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4ec68795d898491",
            "ingress": [
              {
                "cidr_blocks": [
                  "102.88.114.61/32"
                ],
                "description": "SSH from my IP only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "startuptech-bastion-sg",
            "name_prefix": "",
            "owner_id": "163841615330",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "startuptech-bastion-sg"
            },
            "tags_all": {
              "Name": "startuptech-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4b4619780d3cc69"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163841615330",
            "id": "sg-0f4ec68795d898491",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.startuptech-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "startuptech-mongodb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163841615330:security-group/sg-018ef998f6a358ecb",
            "description": "Security group for MongoDB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018ef998f6a358ecb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MongoDB from Backend only",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03886637ec050995c"
                ],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f4ec68795d898491"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "startuptech-mongodb-sg",
            "name_prefix": "",
            "owner_id": "163841615330",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "startuptech-mongodb-sg"
            },
            "tags_all": {
              "Name": "startuptech-mongodb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4b4619780d3cc69"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163841615330",
            "id": "sg-018ef998f6a358ecb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.startuptech-alb-sg",
            "aws_security_group.startuptech-backend-sg",
            "aws_security_group.startuptech-bastion-sg",
            "aws_vpc.startuptech-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "startuptech-private-subnet-one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163841615330:subnet/subnet-0d1469416ebb6e757",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1469416ebb6e757",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "163841615330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "startuptech-private-subnet-one"
            },
            "tags_all": {
              "Name": "startuptech-private-subnet-one"
            },
            "vpc_id": "vpc-0c4b4619780d3cc69"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163841615330",
            "id": "subnet-0d1469416ebb6e757",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.startuptech-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "startuptech-private-subnet-two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163841615330:subnet/subnet-0cf4a1e836b2336b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf4a1e836b2336b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "163841615330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "startuptech-private-subnet-two"
            },
            "tags_all": {
              "Name": "startuptech-private-subnet-two"
            },
            "vpc_id": "vpc-0c4b4619780d3cc69"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163841615330",
            "id": "subnet-0cf4a1e836b2336b8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.startuptech-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "startuptech-public-subnet-one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163841615330:subnet/subnet-0b8d2ccb0b8ce76ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8d2ccb0b8ce76ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "163841615330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "startuptech-public-subnet-one"
            },
            "tags_all": {
              "Name": "startuptech-public-subnet-one"
            },
            "vpc_id": "vpc-0c4b4619780d3cc69"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163841615330",
            "id": "subnet-0b8d2ccb0b8ce76ac",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.startuptech-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "startuptech-public-subnet-two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163841615330:subnet/subnet-0f2987d79de6c0b4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2987d79de6c0b4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "163841615330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "startuptech-public-subnet-two"
            },
            "tags_all": {
              "Name": "startuptech-public-subnet-two"
            },
            "vpc_id": "vpc-0c4b4619780d3cc69"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163841615330",
            "id": "subnet-0f2987d79de6c0b4b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.startuptech-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "startuptech-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163841615330:vpc/vpc-0c4b4619780d3cc69",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-025d8fab129bebd27",
            "default_route_table_id": "rtb-012cdf71483dbcb8b",
            "default_security_group_id": "sg-0f04b32cab6aaa82b",
            "dhcp_options_id": "dopt-02ae5951c1dce3477",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c4b4619780d3cc69",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-012cdf71483dbcb8b",
            "owner_id": "163841615330",
            "region": "us-east-1",
            "tags": {
              "Name": "startuptech-vpc"
            },
            "tags_all": {
              "Name": "startuptech-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163841615330",
            "id": "vpc-0c4b4619780d3cc69",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}